# sparklepop

./: README.md  pyproject.toml
sparklepop/: __init__.py
tests/: test_sparklepop.py
